# lab_youtuber_hampus_donnersten_de24

./: .gitignore  README.md  api.py  explorations.ipynb  function_app.py  ingestion.py  pyproject.toml
backend/: constans.py  data_models.py  rag.py
frontend/: app.py  app_copy.py
