[project]
name = "lab-youtuber-hampus-donnersten-de24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.123.7",
    "google-generativeai>=0.8.5",
    "lancedb>=0.25.3",
    "pandas>=2.3.3",
    "pydantic-ai>=1.26.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "streamlit>=1.52.0",
    "ipykernel>=7.1.0",
]
